Increase font-size in menu and change menu to fixed on mobile when active

--- a/web/app/themes/tob-organized-q-theme/resources/assets/styles/layouts/_header.scss
+++ b/web/app/themes/tob-organized-q-theme/resources/assets/styles/layouts/_header.scss
@@ -72,10 +72,15 @@
 // Menu
 .menu-item a {
 	text-decoration: none;
-	font-size: 12px;
+	font-size: 16px;
 	line-height: 17px;
 	text-align: center;
 	color: white;
+}
+@media (min-width: 768px) {
+	.menu-item a {
+		font-size: 12px;
+	}
 }
 
 @media (max-width: 768px) {
